# SpaceWar

./: CMakeLists.txt  README.md
src/: Circle.cpp  Circle.h  Collision_System.cpp  Collision_System.h  Color.h  Configurable.h  Drawable.h  Events.h  Font.cpp  Font.h  Game.cpp  Game.h  Game_Interface.cpp  Game_Interface.h  Math.cpp  Math.h  Menu.cpp  Menu.h  Moving_Object.cpp  Moving_Object.h  Object.cpp  Object.h  Player.cpp  Player.h  Point.h  Powerup_System.cpp  Powerup_System.h  Projectile.cpp  Projectile.h  Settings.cpp  Settings.h  Sound.cpp  Sound.h  Star.cpp  Star.h  Texture.cpp  Texture.h  Updatable.h  main.cpp
